--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 	"type": "module",
 	"dependencies": {
 		"@icons-pack/svelte-simple-icons": "^3.0.0",
-		"svelte-sound": "^0.6.0"
+		"@tanstack/svelte-query": "^5.51.11",
+		"svelte-sound": "^0.6.0",
+		"svelte-typewriter": "^3.2.3"
 	}
 }
